--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.20.3",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
